--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,17 +6,19 @@ spring:
     default-property-inclusion: non-null
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://megabrain-rds-instance.cvk1jyvmrhp6.ap-northeast-2.rds.amazonaws.com:3306/just?serverTimezone=UTC&characterEncoding=UTF-8
-    username: admin
-    password: gktkaehd
-    #password: admin
+   #url: jdbc:mysql://megabrain-rds-instance.cvk1jyvmrhp6.ap-northeast-2.rds.amazonaws.com:3306/just?serverTimezone=UTC&characterEncoding=UTF-8
+    #username: admin
+    #password: gktkaehd
+    url: jdbc:mysql://localhost:3306/oauthtest?serverTimezone=UTC&characterEncoding=UTF-8
+    username: root
+    password: admin
   security:
     oauth2:
       client:
         registration:
           kakao:
             client-id: 55ec14b78e17e978a4a3b64971060784
-            redirect-uri: http://localhost:8080/login/oauth2/code/kakao
+            redirect-uri: http://localhost:8080/api/kakao
             client-authentication-method: POST
             client-secret: QREhvyjJygyPKlqkJtSFc91GUlvBqA5K
             authorization-grant-type: authorization_code
