--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,12 +6,12 @@ spring:
     default-property-inclusion: non-null
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://megabrain-rds-instance.cvk1jyvmrhp6.ap-northeast-2.rds.amazonaws.com:3306/just?serverTimezone=UTC&characterEncoding=UTF-8
+    url: jdbc:mysql://megabrain-rds-instance.cvk1jyvmrhp6.ap-northeast-2.rds.amazonaws.com:3307/just?serverTimezone=UTC&characterEncoding=UTF-8
     username: admin
     password: gktkaehd
-    #url: jdbc:mysql://localhost:3306/oauthtest?serverTimezone=UTC&characterEncoding=UTF-8
+    #url: jdbc:mysql://localhost:3306/tomorrow?serverTimezone=UTC&characterEncoding=UTF-8
     #username: root
-    #password: admin
+    #password: 214748
   security:
     oauth2:
       client:
@@ -38,7 +38,7 @@ spring:
     generate-ddl: true # DDL ?? ??
     open-in-view: false # View ??? Session(??? ????) ?? ?? - ??? ???? ?? false ?? (default: true)
     hibernate:
-      ddl-auto: validate
+      ddl-auto: create
       naming:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
         use-new-id-generator-mappings: true
@@ -50,3 +50,14 @@ spring:
 jwt:
   secret: QREhvyjJygyPKlqkJtSFc91GUlvBqA5K
   #VlwEyVBsYt9V712583TejMnVUypblYcfPQye08f7MGVA9XkHk
+cloud:
+  aws:
+    credentials:
+      instance-profile: false
+      access-key: AKIAZIZFTLINX4ZS7KX7
+      secret-key: 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
+    region:
+      auto: false
+      static: ap-northeast-2
+    stack:
+      auto: false
