--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,12 +6,12 @@ spring:
     default-property-inclusion: non-null
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://megabrain-rds-instance.cvk1jyvmrhp6.ap-northeast-2.rds.amazonaws.com:3307/just?serverTimezone=UTC&characterEncoding=UTF-8
-    username: admin
-    password: gktkaehd
-    #url: jdbc:mysql://localhost:3306/oauthtest?serverTimezone=UTC&characterEncoding=UTF-8
-    #username: root
-    #password: admin
+    #url: jdbc:mysql://megabrain-rds-instance.cvk1jyvmrhp6.ap-northeast-2.rds.amazonaws.com:3307/just?serverTimezone=UTC&characterEncoding=UTF-8
+    #username: admin
+    #password: gktkaehd
+    url: jdbc:mysql://localhost:3306/oauthtest?serverTimezone=UTC&characterEncoding=UTF-8
+    username: root
+    password: admin
   security:
     oauth2:
       client:
