--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,9 +11,9 @@ spring:
     url: jdbc:mysql://megabrain-rds-instance.cvk1jyvmrhp6.ap-northeast-2.rds.amazonaws.com:3307/just?serverTimezone=UTC&characterEncoding=UTF-8
     username: admin
     password: gktkaehd
-    #url: jdbc:mysql://localhost:3306/oauthtest?serverTimezone=UTC&characterEncoding=UTF-8
+    #url: jdbc:mysql://127.0.0.1:3306/just?serverTimezone=UTC&characterEncoding=UTF-8
     #username: root
-    #password: admin
+    #password: 214748
   security:
     oauth2:
       client:
