--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,9 +11,9 @@ spring:
     url: jdbc:mysql://megabrain-rds-instance.cvk1jyvmrhp6.ap-northeast-2.rds.amazonaws.com:3307/just?serverTimezone=UTC&characterEncoding=UTF-8
     username: admin
     password: gktkaehd
-    #url: jdbc:mysql://127.0.0.1:3306/just?serverTimezone=UTC&characterEncoding=UTF-8
+    #url: jdbc:mysql://127.0.0.1:3306/oauthtest?serverTimezone=UTC&characterEncoding=UTF-8
     #username: root
-    #password: 214748
+    #password: admin
   security:
     oauth2:
       client:
@@ -40,7 +40,7 @@ spring:
     generate-ddl: true # DDL ?? ??
     open-in-view: false # View ??? Session(??? ????) ?? ?? - ??? ???? ?? false ?? (default: true)
     hibernate:
-      ddl-auto: create
+      ddl-auto: validate
       naming:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
         use-new-id-generator-mappings: true
