--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,13 +1,13 @@
-baseUrl : https://pick-read-me-actions-s3-bucket.s3.ap-northeast-2.amazonaws.com/
+baseUrl : https://just-s3.s3.ap-northeast-2.amazonaws.com/
 server:
   port: 9000
 cloud:
   aws:
     credentials:
-      accessKey: AKIAZIZFTLINZH6AKZ6M
-      secretKey: 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
+      accessKey: AKIA2PIR5NDY2GVZRCX3
+      secretKey: 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
       region: ap-northeast-2
-      bucketName: pick-read-me-actions-s3-bucket
+      bucketName: just-s3
       stack:
         auto: false
 spring:
@@ -19,9 +19,9 @@ spring:
   datasource:
     hikari:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://52.78.80.150:3306/pick_read_me?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC&characterEncoding=UTF-8
+    url: jdbc:mysql://13.209.213.191/just?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC&characterEncoding=UTF-8
     username: username
-    password: Newyork077!
+    password: 334334334
     connection-timeout: 30000 #30초 설정
     maximum-pool-size: 150 #150개 설정
     max-lifetime:  3600000 #1시간 설정
@@ -31,7 +31,7 @@ spring:
         registration:
           kakao:
             client-id: 55ec14b78e17e978a4a3b64971060784
-            redirect-uri: http://52.78.80.150:9000/api/kakao/access_token
+            redirect-uri: http://13.209.213.191:9000/api/kakao/access_token
             client-authentication-method: POST
             client-secret: QREhvyjJygyPKlqkJtSFc91GUlvBqA5K
             authorization-grant-type: authorization_code
