--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,12 +19,12 @@ spring:
   datasource:
     hikari:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://13.209.213.191/just?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC&characterEncoding=UTF-8
-    username: username
-    password: 334334334
-    connection-timeout: 30000 #30초 설정
+    url: jdbc:mysql://13.209.213.191:3306/just?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC&characterEncoding=UTF-8
+    username: admin
+    password: 334334334!
+    connection-timeout: 15000 #30초 설정
     maximum-pool-size: 150 #150개 설정
-    max-lifetime:  3600000 #1시간 설정
+    max-lifetime:  30000 #1시간 설정
   security:
     oauth2:
       client:
@@ -51,7 +51,7 @@ spring:
     generate-ddl: true
     open-in-view: false
     hibernate:
-      ddl-auto: create
+      ddl-auto: validate
       naming:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
         use-new-id-generator-mappings: true
