--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,10 @@
+chatgpt:
+  api-key: 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
+  model: gpt-3.5-turbo
+  multi:
+    model: gpt-3.5-turbo
+    max-tokens: 512
+
 baseUrl : https://just-s3.s3.ap-northeast-2.amazonaws.com/
 server:
   port: 9000
