--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,8 @@
-chatgpt:
-  api-key: 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
+gpt :
   model: gpt-3.5-turbo
-  multi:
-    model: gpt-3.5-turbo
-    max-tokens: 512
-
+  api:
+    key: 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
+    url: https://api.openai.com/v1/chat/completions
 baseUrl : https://just-s3.s3.ap-northeast-2.amazonaws.com/
 server:
   port: 9000
