--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,26 @@
-HELP.md
+wwHELP.md
+
 .gradl
+
+
+.gradle
 
 build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
 /src/main/resources/application.yml
+
 /src/test/resources/application.yml
+
+/src/main/resources/templates/secret/AuthKey_2Y9664DW2T.p8
+
 /src/main/resources/templates/secret/.p8
+
+/application.yml
+
+/src/main/resources/templates/secret/.p8
+/src/main/resources/key/just-firebase-key.json
 
 ### STS ###
 .apt_generated
@@ -17,7 +30,6 @@ build/
 .settings
 .springBeans
 .sts4-cache
-
 bin/
 !**/src/main/**/bin/
 !**/src/test/**/bin/
@@ -27,7 +39,6 @@ bin/
 *.iws
 *.iml
 *.ipr
-
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
