--- a/build.gradle
+++ b/build.gradle
@@ -100,6 +100,9 @@ dependencies {
 	//logstash
 	implementation 'net.logstash.logback:logstash-logback-encoder:6.6'
 
+	//firebase
+	implementation 'com.google.firebase:firebase-admin:9.2.0'
+
 }
 tasks.named('test') {
 	useJUnitPlatform()
