--- a/build.gradle
+++ b/build.gradle
@@ -102,6 +102,7 @@ dependencies {
 
 	//firebase
 	implementation 'com.google.firebase:firebase-admin:9.2.0'
+	implementation group: 'com.squareup.okhttp3', name: 'okhttp', version: '4.2.2'
 
 }
 tasks.named('test') {
