--- a/.gitignore
+++ b/.gitignore
@@ -1,73 +1,38 @@
-<<<<<<< HEAD
-wwHELP.md
-
-.gradl
-
-
-.gradle
-
-=======
 HELP.md
-<<<<<<< HEAD
 .gradl
 
-=======
-<<<<<<< HEAD
-.gradl
 
-=======
 .gradle
->>>>>>> 0ba3d96e28582a106923c0002d0de00d86636cc6
->>>>>>> 8601bc98eebe8c6d385e6609da4ad3cfa1aa969f
->>>>>>> 48f62e473761cedfe8430b701ec388416dc4d109
+
+.gradl
+
+.gradle
+
 build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
 /src/main/resources/application.yml
-<<<<<<< HEAD
-
-=======
-<<<<<<< HEAD
->>>>>>> 48f62e473761cedfe8430b701ec388416dc4d109
 /src/test/resources/application.yml
-
-/src/main/resources/templates/secret/AuthKey_2Y9664DW2T.p8
-
 /src/main/resources/templates/secret/.p8
 
-<<<<<<< HEAD
-/application.yml
-
+/src/test/resources/application.yml
+/src/main/resources/templates/secret/AuthKey_2Y9664DW2T.p8
 /src/main/resources/templates/secret/.p8
 /src/main/resources/key/just-firebase-key.json
 
-=======
-=======
-<<<<<<< HEAD
-<<<<<<<< HEAD:.gitignore
-/src/test/resources/application.yml
-<<<<<<< HEAD
-<<<<<<< HEAD
-/src/main/resources/templates/secret/AuthKey_2Y9664DW2T.p8
-=======
-/src/main/resources/templates/secret/.p8
->>>>>>> aea347125278b8318ff91f76045a9a2d7fb0c828
-=======
 /application.yml
-<<<<<<< HEAD
->>>>>>> 5855445d7bc8ef3f27e9adfe6798588403df3aac
 
-=======
 /src/main/resources/templates/secret/.p8
->>>>>>> aea347125278b8318ff91f76045a9a2d7fb0c828
 
-========
->>>>>>>> 0ba3d96e28582a106923c0002d0de00d86636cc6:just/.gitignore
-=======
->>>>>>> 0ba3d96e28582a106923c0002d0de00d86636cc6
->>>>>>> 8601bc98eebe8c6d385e6609da4ad3cfa1aa969f
->>>>>>> 48f62e473761cedfe8430b701ec388416dc4d109
+
+/src/test/resources/application.yml
+/src/main/resources/templates/secret/AuthKey_2Y9664DW2T.p8
+/src/main/resources/templates/secret/.p8
+
+/application.yml
+/src/main/resources/templates/secret/.p8
+/src/main/resources/key/just-firebase-key.json
 ### STS ###
 .apt_generated
 .classpath
@@ -76,17 +41,6 @@ build/
 .settings
 .springBeans
 .sts4-cache
-<<<<<<< HEAD
-=======
-<<<<<<< HEAD
-
-=======
-<<<<<<< HEAD
-
-=======
->>>>>>> 0ba3d96e28582a106923c0002d0de00d86636cc6
->>>>>>> 8601bc98eebe8c6d385e6609da4ad3cfa1aa969f
->>>>>>> 48f62e473761cedfe8430b701ec388416dc4d109
 bin/
 !**/src/main/**/bin/
 !**/src/test/**/bin/
@@ -96,17 +50,7 @@ bin/
 *.iws
 *.iml
 *.ipr
-<<<<<<< HEAD
-=======
-<<<<<<< HEAD
 
-=======
-<<<<<<< HEAD
-
-=======
->>>>>>> 0ba3d96e28582a106923c0002d0de00d86636cc6
->>>>>>> 8601bc98eebe8c6d385e6609da4ad3cfa1aa969f
->>>>>>> 48f62e473761cedfe8430b701ec388416dc4d109
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
@@ -119,12 +63,7 @@ out/
 /.nb-gradle/
 
 ### VS Code ###
-<<<<<<< HEAD
 .vscode/
-=======
-<<<<<<< HEAD
+
+
 .vscode/
-=======
-.vscode/
->>>>>>> 0ba3d96e28582a106923c0002d0de00d86636cc6
->>>>>>> 8601bc98eebe8c6d385e6609da4ad3cfa1aa969f
