--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -52,3 +52,39 @@ jobs: #작업을 정의
         with:
           gradle-version: 7.2 #그래들 버전 7.2 사용
           arguments: clean build -x test
+
+      # 3. Docker 이미지 빌드
+      - name: docker image build
+        run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/just .
+
+      # 4. DockerHub 로그인
+      - name: docker login
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+
+      # 5. Docker Hub 이미지 푸시
+      - name: docker Hub push
+        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/just
+    run-docker-image-on-ec2:
+      # build-docker-image (위)과정이 완료되어야 실행됩니다.
+      needs: build-docker-image
+      runs-on: self-hosted
+
+      steps:
+        # 1. 최신 이미지를 풀받습니다
+        - name: docker pull
+          run: sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/just
+
+        # 2. 기존의 컨테이너를 중지시킵니다
+        - name: docker stop container
+          run: sudo docker stop $(sudo docker ps -q) 2>/dev/null || true
+
+        # 3. 최신 이미지를 컨테이너화하여 실행시킵니다
+        - name: docker run new container
+          run: sudo docker run --name just --rm -d -p 9000:9000 ${{ secrets.DOCKERHUB_USERNAME }}/just
+
+        # 4. 미사용 이미지를 정리합니다
+        - name: delete old docker image
+          run: sudo docker system prune -f
