--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -19,7 +19,7 @@ permissions: #작업에 필요한 권환₩#
   contents: read
 
 jobs: #작업을 정의
-    build build-docker-image:
+    build-docker-image:
       runs-on: ubuntu-latest # Ubunt 환경에서 작업을 실행
 
       steps: #작업 단계 정의
