--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -66,10 +66,9 @@ jobs: #작업을 정의
             username: ${{ secrets.DOCKERHUB_USERNAME }}
             password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
-
         # 5. Docker Hub 이미지 푸시
         - name: docker Hub push
-          run: docker push {{ secrets.DOCKERHUB_USERNAME }}/just
+          run: docker push localhost:5000/{{ secrets.DOCKERHUB_USERNAME }}/just
 
     run-docker-image-on-ec2:
       # build-docker-image (위)과정이 완료되어야 실행됩니다.
