--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -66,11 +66,11 @@ jobs: #작업을 정의
             username: ${{ secrets.DOCKERHUB_USERNAME }}
             password: ${{ secrets.DOCKERHUB_PASSWORD }}
         - name : docker tag
-          run: docker tag ${{ secrets.DOCKERHUB_USERNAME }}/just localhost:5000/${{ secrets.DOCKERHUB_USERNAME }}/just
+          run: docker tag ${{ secrets.DOCKERHUB_USERNAME }}/just localhost:5000/${{ secrets.DOCKERHUB_USERNAME }}/just:1.0
 
         # 5. Docker Hub 이미지 푸시
         - name: docker Hub push
-          run: docker push localhost:5000/${{ secrets.DOCKERHUB_USERNAME }}/just
+          run: docker push localhost:5000/${{ secrets.DOCKERHUB_USERNAME }}/just:1.0
   #
     run-docker-image-on-ec2:
       # build-docker-image (위)과정이 완료되어야 실행됩니다.
@@ -80,7 +80,7 @@ jobs: #작업을 정의
       steps:
         # 1. 최신 이미지를 풀받습니다
         - name: docker pull
-          run: sudo docker pull localhost:5000/${{ secrets.DOCKERHUB_USERNAME }}/just
+          run: sudo docker pull localhost:5000/${{ secrets.DOCKERHUB_USERNAME }}/just:1.0
 
         # 2. 기존의 컨테이너를 중지시킵니다
         - name: docker stop container
@@ -88,7 +88,7 @@ jobs: #작업을 정의
 
         # 3. 최신 이미지를 컨테이너화하여 실행시킵니다
         - name: docker run new container
-          run: sudo docker run --name just --rm -d -p 9000:9000 localhost:5000/${{ secrets.DOCKERHUB_USERNAME }}/just
+          run: sudo docker run --name just --rm -d -p 9000:9000 localhost:5000/${{ secrets.DOCKERHUB_USERNAME }}/just:1.0
 
         # 4. 미사용 이미지를 정리합니다
         - name: delete old docker image
