--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,20 @@
 HELP.md
-<<<<<<< HEAD
-.gradl
 
-=======
+
+.DS_Store
+
 .gradle
->>>>>>> 0ba3d96e28582a106923c0002d0de00d86636cc6
 build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
 /src/main/resources/application.yml
-<<<<<<< HEAD
-<<<<<<<< HEAD:.gitignore
+
 /src/test/resources/application.yml
 /application.yml
-<<<<<<< HEAD
 
-=======
 /src/main/resources/templates/secret/.p8
->>>>>>> aea347125278b8318ff91f76045a9a2d7fb0c828
 
-========
->>>>>>>> 0ba3d96e28582a106923c0002d0de00d86636cc6:just/.gitignore
-=======
->>>>>>> 0ba3d96e28582a106923c0002d0de00d86636cc6
 ### STS ###
 .apt_generated
 .classpath
@@ -32,10 +23,7 @@ build/
 .settings
 .springBeans
 .sts4-cache
-<<<<<<< HEAD
 
-=======
->>>>>>> 0ba3d96e28582a106923c0002d0de00d86636cc6
 bin/
 !**/src/main/**/bin/
 !**/src/test/**/bin/
@@ -45,10 +33,7 @@ bin/
 *.iws
 *.iml
 *.ipr
-<<<<<<< HEAD
 
-=======
->>>>>>> 0ba3d96e28582a106923c0002d0de00d86636cc6
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
@@ -61,8 +46,4 @@ out/
 /.nb-gradle/
 
 ### VS Code ###
-<<<<<<< HEAD
 .vscode/
-=======
-.vscode/
->>>>>>> 0ba3d96e28582a106923c0002d0de00d86636cc6
